2008-08-25  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_misc.c, cvl/glsl/wavelets/idwt_step1.glsl,
	cvl/glsl/wavelets/idwt_step2.glsl, cvl/glsl/misc/sort.glsl,
	cvl/glsl/misc/resize_seq.glsl: Simplify shader code.

2008-08-21  Martin Lambers <marlam@marlam.de>

	* tests/cmd_wavelets.sh: Fix test.

2008-08-20  Martin Lambers <marlam@marlam.de>

	* cvtool/cmd_draw.c: Avoid gcc-4.3 compiler warning.
	* cvtool/cmd_wavelets.c, cvtool/cvtool.c, cvtool/Makefile.am,
	tests/cmd_wavelets.sh, doc/cvtool.texi: Rename the 'dwt' command to
	'wavelets'.
	* configure.ac, doc/cvtool.texi, doc/cvtool.1, doc/cvl.texi: Bump
	version number and shared library number.
	* cvl/cvl_wavelets.c, cvl/cvl/cvl_wavelets.h, cvl/cvl/cvl.h,
	cvl/glsl/wavelets, cvl/Makefile.am, cvtool/cmd_wavelets.c: Improve
	naming of wavelet functions.
	* cvl/cvl_wavelets.c, cvl/cvl/cvl_wavelets.h,
	cvl/glsl/wavelets/hard_thresholding.glsl, cvl/Makefile.am,
	cvtool/cmd_wavelets.c, doc/cvtool.texi: Add Hard Thresholding to the
	wavelets module.
	* cvl/cvl_wavelets.c, cvl/glsl/wavelets/dwt_step1.glsl,
	cvl/glsl/wavelets/dwt_step2.glsl, cvl/glsl/wavelets/idwt_step1.glsl,
	cvl/glsl/wavelets/idwt_step2.glsl: Improve wavelets code.
	* cvl/cvl_wavelets.c: Fix a bug in cvl_wavelets_idwt() for levels
	greater than 1. There are still more bugs.
	* cvl/cvl_wavelets.c, cvl/glsl/wavelets/idwt_step2.glsl: Finally fix
	cvl_wavelets_idwt() for levels greater than one.
	* tests/Makefile.am: Fix test for wavelet command.
	* cvl/cvl_wavelets.c: Remove unused dbeugging code.
	* cvl/cvl_wavelets.c, cvl/cvl/cvl_wavelets.h,
	cvl/glsl/wavelets/soft_thresholding.glsl,
	cvl/glsl/wavelets/hard_thresholding.glsl, tests/cmd_wavelets.sh,
	doc/cvtool.texi, cvtool/cmd_wavelets.c: Fix wavelet soft and hard
	thresholding and make it work for levels higher than 1.

2008-08-19  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_dwt.c, cvl/cvl/cvl_dwt.h, cvl/cvl/cvl.h, cvl/glsl/dwt, 
	cvl/glsl/dwt/dwt_step1.glsl, cvl/glsl/dwt/dwt_step2.glsl, 