@@ -1,3 +1,8 @@
+2009-02-03  Martin Lambers <marlam@marlam.de>
+
+	* cvl/cvl_init.c: Do not test for GLEW_VERSION_2_1 because it is not 
+	defined when OpenGL 3 is active.
+
 2008-08-25  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl_misc.c, cvl/glsl/wavelets/idwt_step1.glsl,
